--- a/typedefs/pubspec.yaml
+++ b/typedefs/pubspec.yaml
@@ -5,7 +5,12 @@ publish_to: none
 
 environment:
   sdk: ">=2.18.0 <3.0.0"
-
+dependencies:
+  either_dart: ^0.3.0
+  exceptions:
+    path: ../exceptions
+  failures:
+    path: ../failures
 dev_dependencies:
   mocktail: ^0.3.0
   test: ^1.19.2
