--- a/failures/analysis_options.yaml
+++ b/failures/analysis_options.yaml
@@ -1,4 +1,7 @@
 include: package:very_good_analysis/analysis_options.yaml
+analyzer:
+  exclude:
+    - "**/*.g.dart"
 linter:
   rules:
     non_constant_identifier_names: false
