--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -7,15 +7,38 @@ environment:
   sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
+  data_source:
+    path: ../data_source
+  dio: ^4.0.6
+  either_dart: ^0.3.0
+  exceptions:
+    path: ../exceptions
+  failures:
+    path: ../failures
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.5+1
+  get_it: ^7.2.0
+  injectable: ^2.1.0
+  models:
+    path: ../models
+  repository:
+    path: ../repository
+  stacked: ^3.0.1
+  stacked_services: ^0.9.9
+  typedefs:
+    path: ../typedefs
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.1.3
+  integration_test:
+    sdk: flutter
   mockito: ^5.3.2
+  stacked_generator: ^0.8.3
   very_good_analysis: ^3.1.0
 
 flutter:
   uses-material-design: true
-  generate: true
