--- a/models/analysis_options.yaml
+++ b/models/analysis_options.yaml
@@ -2,3 +2,4 @@ include: package:very_good_analysis/analysis_options.yaml
 analyzer:
   errors:
     non_constant_identifier_names: ignore
+    invalid_annotation_target: ignore
