docs: add `README.md` and `LICENSE.md` (#4)
* docs: add README.md

* chore: fix broken links

* chore: fix headings

* chore: add license

* chore: rename license

--- a/melos.yaml
+++ b/melos.yaml
@@ -3,11 +3,11 @@ repository: https://github.com/saileshbro/full_stack_todo_dart.git
 packages:
   - backend
   - frontend
-  - data_sorce
+  - data_source
   - exceptions
   - models
   - repository
-  - failutes
+  - failures
   - typedefs
 
 sdkPath: .fvm/flutter_sdk
