--- a/backend/pubspec.yaml
+++ b/backend/pubspec.yaml
@@ -4,11 +4,11 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
   bcrypt: ^1.1.3
-  dart_frog: ^0.3.2
+  dart_frog: ^0.3.5
   dart_jsonwebtoken: ^2.7.1
   data_source:
     path: ../data_source
@@ -21,13 +21,14 @@ dependencies:
   http: ^0.13.5
   models:
     path: ../models
-  postgres: ^2.5.2
+  postgres: ^2.6.1
   repository:
     path: ../repository
   typedefs:
     path: ../typedefs
 
 dev_dependencies:
+  build_runner: ^2.3.3
   mocktail: ^0.3.0
-  test: ^1.22.2
-  very_good_analysis: ^3.1.0
+  test: ^1.24.1
+  very_good_analysis: ^4.0.0+1
