--- a/exceptions/pubspec.yaml
+++ b/exceptions/pubspec.yaml
@@ -4,10 +4,11 @@ version: 0.1.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 dev_dependencies:
+  build_runner: ^2.3.3
   mocktail: ^0.3.0
-  test: ^1.22.2
-  very_good_analysis: ^3.1.0
+  test: ^1.24.1
+  very_good_analysis: ^4.0.0+1
 dependencies:
-  dio: ^4.0.6
+  dio: ^5.1.1
