--- a/failures/pubspec.yaml
+++ b/failures/pubspec.yaml
@@ -4,15 +4,15 @@ version: 0.1.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dev_dependencies:
   build_runner: ^2.3.3
   freezed: ^2.3.2
-  json_serializable: ^6.6.0
+  json_serializable: ^6.6.1
   mocktail: ^0.3.0
-  test: ^1.22.2
-  very_good_analysis: ^3.1.0
+  test: ^1.24.1
+  very_good_analysis: ^4.0.0+1
 dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
