--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -4,12 +4,13 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
+  flutter: ">=3.7.0"
 
 dependencies:
   data_source:
     path: ../data_source
-  dio: ^4.0.6
+  dio: ^5.1.1
   either_dart: ^0.3.0
   exceptions:
     path: ../exceptions
@@ -17,16 +18,16 @@ dependencies:
     path: ../failures
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.18.5+1
+  flutter_hooks: ^0.18.6
   get_it: ^7.2.0
-  injectable: ^2.1.0
+  injectable: ^2.1.1
   models:
     path: ../models
   repository:
     path: ../repository
-  retrofit: ^3.3.1
+  retrofit: ^4.0.1
   stacked: 3.1.0+2
-  stacked_services: ^0.9.9
+  stacked_services: 0.9.9
   typedefs:
     path: ../typedefs
 
@@ -34,13 +35,13 @@ dev_dependencies:
   build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
-  injectable_generator: ^2.1.3
+  injectable_generator: ^2.1.5
   integration_test:
     sdk: flutter
-  mockito: ^5.3.2
-  retrofit_generator: ^4.2.0
-  stacked_generator: ^0.8.3
-  very_good_analysis: ^3.1.0
+  mockito: ^5.4.0
+  retrofit_generator: ^6.0.0+1
+  stacked_generator: 0.8.3
+  very_good_analysis: ^4.0.0+1
 dependency_overrides:
   json_annotation: ^4.8.0
   json_serializable: ^6.6.0
