--- a/models/analysis_options.yaml
+++ b/models/analysis_options.yaml
@@ -2,4 +2,5 @@ include: package:very_good_analysis/analysis_options.yaml
 analyzer:
   errors:
     non_constant_identifier_names: ignore
+    flutter_style_todos: ignore
     invalid_annotation_target: ignore
