--- a/models/pubspec.yaml
+++ b/models/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.1.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
   either_dart: ^0.3.0
@@ -20,8 +20,8 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.3.3
   freezed: ^2.3.2
-  json_serializable: ^6.6.0
+  json_serializable: ^6.6.1
   lints: ^2.0.1
   mocktail: ^0.3.0
-  test: ^1.22.2
-  very_good_analysis: ^3.1.0
+  test: ^1.24.1
+  very_good_analysis: ^4.0.0+1
